
  * Drop the (now) unused install_window and references to it.
  * Don't start the ubiquity panel on xfwm4.  It doesn't appear to work properly
    for now even with the proper indicators installed.
  * Set the priority the prepare page higher to prevent timezone from being
    shown instead.
  * Fix misc.get_release to return the proper data for non-ubuntu disks.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 10 Aug 2010 20:26:07 -0500

ubiquity (2.3.4) maverick; urgency=low

  [ Mario Limonciello ]
  * Also set the custom title when translating widgets.
  * If there is at least one framebuffer device, fallback to fbdev rather
    than vesa for bulletproof X.
  * Remove extra imports in ubiquity-dm.
  * Add a new template ubiquity/force_failsafe_graphics intended to force
    installation to use vesa or fbdev, but not on the target system.  This is
    primarily intended for systems where the installation kernel has known
    graphics problems, but you are solving them in a post installation step.
  * Fix packaging to install the new pieces introduced for the overhaul.
  * debian/control: fix build-deps from redesign branch.
  * install two new png files for the language page in the gtk frontend.
  * Fix automatic mode in gtk_ui.
  * Add a new controller function to allow disabling the progress_section
    of the Window for pages it doesn't make sense on that might be shown
    in automatic mode before the partitioner comes.
  * Move the call to unmount_source back into install.py, it's only really
    used there for file copy, not by plugins.
  * Update some DebconfFetchProgress calls to DebconfAcquireProgress calls.
  * Run success cmd after plugininstall finishes.
  * Correct a few more deprecated apt calls.
  * Don't show the warning page or the prepare page in oem-config for now.
    The prepare page might make sense to re-enable, but will need a little
    different wording if so.