@@ -70,7 +70,7 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="install_ubuntu">
-                        <property name="label" translatable="yes">Install Ubuntu</property>
+                        <property name="label" translatable="yes">Install ${RELEASE}</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
@@ -85,7 +85,7 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="try_ubuntu">
-                        <property name="label" translatable="yes">Try Ubuntu</property>
+                        <property name="label" translatable="yes">Try ${RELEASE}</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
@@ -107,7 +107,7 @@
                     <property name="can_focus">True</property>
                     <property name="xalign">0</property>
                     <property name="yalign">0</property>
-                    <property name="label" translatable="yes">You can try Ubuntu without making any changes to your system, or install alongside or instead of your current operating system.</property>
+                    <property name="label" translatable="yes">You can try ${RELEASE} without making any changes to your system, or install alongside or instead of your current operating system.</property>
                     <property name="wrap">True</property>
                   </object>
                   <packing>
