@@ -6,6 +6,8 @@ ubiquity (2.3.5) UNRELEASED; urgency=low
   * Set the priority the prepare page higher to prevent timezone from being
     shown instead.
   * Fix misc.get_release to return the proper data for non-ubuntu disks.
+  * Correct the text in the stepLanguage widgets to reflect ${RELEASE}
+    rather than hardcoding to Ubuntu.
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 10 Aug 2010 20:26:07 -0500
 
